[package]
name = "comment_adder"
version = "0.1.2"
authors = ["Uzdenov Karim <mrkarim777@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2"
mktemp = "0.4"
clap = "2"
colored = "2"
structopt = "0.3"