[package]
name = "comment_adder"
version = "0.3.1"
authors = ["Uzdenov Karim <mrkarim777@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2"
mktemp = "0.4"
clap = "2"
colored = "2"
structopt = "0.3"
indicatif = {version = "*", features = ["rayon"]}
time = "0.2"
rayon = "1.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
path = "E:/rust_projects/comment_adder/src/benches/bench.rs"
harness = false